--- a/public_html/src/app/dialog/dialog.component.html
+++ b/public_html/src/app/dialog/dialog.component.html
@@ -16,15 +16,15 @@
     </div>
     <div *ngIf="button==1">
       <button mat-button color="accent" (click)="onOk()" tabindex="-1">OK</button>
-      <button mat-button color="accent" (click)="onCancel()" tabindex="-1">CANCEL</button>
+      <button mat-button color="accent" (click)="onCancel()" tabindex="-1">CANCELAR</button>
     </div>
     <div *ngIf="button==2">
-      <button mat-button color="accent" (click)="onYes()" tabindex="-1">YES</button>
+      <button mat-button color="accent" (click)="onYes()" tabindex="-1">SÍ</button>
       <button mat-button color="accent" (click)="onNo()" tabindex="-1">NO</button>
     </div>
     <div *ngIf="button==3">
-      <button mat-button color="accent" (click)="onAccept()" tabindex="-1">ACCEPT</button>
-      <button mat-button color="accent" (click)="onReject()" tabindex="-1">REJECT</button>
+      <button mat-button color="accent" (click)="onAccept()" tabindex="-1">ACEPTAR</button>
+      <button mat-button color="accent" (click)="onReject()" tabindex="-1">NO, GRACIAS</button>
     </div>
   </div>
   
