--- a/public_html/src/app/app.component.css
+++ b/public_html/src/app/app.component.css
@@ -63,3 +63,13 @@
   }
 
   .center{left:25%;width:50%;position:absolute;text-align:center;}
+
+
+
+  .loading {
+    position: absolute;
+    z-index: 1002;
+    background-color: rgba(255, 255, 255, 0.5);
+    width: 100%;
+    height: 100%;
+  }
